src/hg/utils/gff3ToGenePred/tests/expected/ncbiProblemsTest.out
Error: genePred from GFF3: input/ncbiProblems.gff3:22: gene14757 exon 2 (NW_001956548.1:26533059-26533133) overlaps previous exon (NW_001956548.1:26532888-26533060)
Warning: skipping: invalid genePred created: gene14757 NW_001956548.1:26531106-26534144
Warning: skipping: invalid strand for mRNA cds29481
2 warnings converting GFF3 file: input/ncbiProblems.gff3
