src/hg/utils/gff3ToGenePred/tests/expected/ncbiProblemsTest.attrs
rna33064	ID	rna33064
rna33064	gbkey	tRNA
rna33064	product	tRNA-Pro
rna33063	ID	rna33063
rna33063	gbkey	tRNA
rna33063	product	tRNA-Thr
gene25009	ID	gene25009
gene25009	Dbxref	GeneID:807931
gene25009	Name	CYTB
gene25009	gbkey	Gene
gene25009	gene	CYTB
gene25009	gene_synonym	cytB
